--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -15,7 +15,9 @@
                 <h2 style="font-size: 25px"><a>Maringá - PR</a></h1>
                 <h2 style="font-size: 15px"><a>{{today}}</a></h1>
             </label>
-        </div>      
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-2">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         </div>
