--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -17,7 +17,9 @@
             </label>
         </div>
     </div>
-    <div class="row">
+</div>
+<div class="row">
+    <div class="col-md-6 pull-center">
         <div class="col-md-2">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         </div>
