--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -27,9 +27,9 @@
             <h1 style="font-size: 35px"><a>{{temp}}°C</a></h1>
         </div>
         <div class="col-md-4 col-md-push-1">
-            <h1 style="font-size: 20px"><a>Chuva: {{rain}}%</a></h1>
-            <h1 style="font-size: 20px"><a>Umidade: {{humidity}}%</a></h1>
-            <h1 style="font-size: 20px"><a>Vento: {{wind}}km/h</a></h1>
+            <p style="font-size: 20px"><a>Chuva: {{rain}}%</a></p>
+            <p style="font-size: 20px"><a>Umidade: {{humidity}}%</a></p>
+            <p style="font-size: 20px"><a>Vento: {{wind}}km/h</a></p>
         </div>
     </div>
 </div>
