--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -27,9 +27,9 @@
             <h1 style="font-size: 35px"><a>{{temp}}°C</a></h1>
         </div>
         <div class="col-md-4 col-md-push-1">
-            <p style="font-size: 20px">Chuva: {{rain}}%</p>
-            <p style="font-size: 20px">Umidade: {{humidity}}%</p>
-            <p style="font-size: 20px">Vento: {{wind}}km/h</p>
+            <label style="font-size: 20px">Chuva: {{rain}}%</label>
+            <label style="font-size: 20px">Umidade: {{humidity}}%</label>
+            <label style="font-size: 20px">Vento: {{wind}}km/h</label>
         </div>
     </div>
 </div>
