--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -28,8 +28,8 @@
         </div>
         <div class="col-md-4 col-md-push-1">
             <label style="font-size: 15px">
-                Chuva: {{rain}}%
-                Umidade: {{humidity}}%
+                Chuva: {{rain}}%<br>
+                Umidade: {{humidity}}%<br>
                 Vento: {{wind}}km/h
             </label>
         </div>
