--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -9,8 +9,8 @@
 
 
 <div class="row">
-    <div class="col-md-6 pull-center">
-        <div class="col-md-6">
+    <div class="col-md-6 col-sm-6 pull-center">
+        <div class="col-md-6 col-sm-6">
             <label>
                 <h2 style="font-size: 25px"><a>Maringá - PR</a></h1>
                 <h2 style="font-size: 15px"><a>{{today}}</a></h1>
@@ -19,14 +19,14 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6 col-sx-6 pull-center">
-        <div class="col-md-2 col-sx-2">
+    <div class="col-md-6 col-sm-6 pull-center">
+        <div class="col-md-2 col-sm-2">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         </div>
-        <div class="col-md-4 col-sx-4">
+        <div class="col-md-4 col-sm-4">
             <h1 style="font-size: 35px"><a>{{temp}}°C</a></h1>
         </div>
-        <div class="col-md-3 col-sx-3">
+        <div class="col-md-3 col-sm-3">
             <label style="font-size: 15px">
                 Chuva: {{rain}}%<br>
                 Umidade: {{humidity}}%<br>
