--- a/cotador/templates/pdc/base.html
+++ b/cotador/templates/pdc/base.html
@@ -16,7 +16,7 @@
     <body data-spy="scroll" data-target=".bs-docs-sidebar">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="page-header">
-            <h1><a href="/">| ADAPITECH |</a></h1>
+            <h1><a href="/pdc">| ADAPITECH |</a></h1>
         </div>
         <div class="panel panel-primary">
           <!-- Menu begin -->
