--- a/cotador/templates/pdc/base.html
+++ b/cotador/templates/pdc/base.html
@@ -18,7 +18,7 @@
         <div class="page-header">
             <h1><a href="/pdc">| ADAPITECH |</a></h1>
         </div>
-        <div class="panel panel-primary">
+        <div>
           <!-- Menu begin -->
 
             <!-- Menu end -->
