--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -24,7 +24,7 @@
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         </div>
         <div class="col-md-4 col-xs-4">
-            <p style="font-size: 35px"><a>{{temp}}°C</a></p>
+            <p style="font-size: 35px"><a><br>{{temp}}°C</a></p>
         </div>
         <div class="col-md-3 col-xs-6">
             <label style="font-size: 15px">
