--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -24,7 +24,7 @@
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
         </div>
         <div class="col-md-2 col-xs-3">
-            <label style="font-size: 15px"><a>{{temp}}°C</a></label>
+            <label style="font-size: 15px">{{temp}}°C</label>
         </div>
         <div class="col-md-3 col-xs-6">
             <label style="font-size: 15px">
