--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -22,6 +22,7 @@
     <div class="col-md-6 col-xs-10 pull-center">
         <div class="col-md-2 col-xs-3">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
+            <label style="font-size: 35px">{{temp}}°C</label>
         </div>
         <div class="col-md-2 col-xs-3">
             <label style="font-size: 35px">{{temp}}°C</label>
