--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -21,7 +21,7 @@
 <div class="row">
     <div class="col-md-6 col-xs-10 pull-center">
         <div class="col-md-2 col-xs-3">
-            <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png"/>
+            <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>
             <label style="font-size: 35px">{{temp}}°C</label>
         </div>
         <div class="col-md-2 col-xs-3">
