--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -22,7 +22,7 @@
     <div class="col-md-6 col-xs-10 pull-center">
         <div class="col-md-2 col-xs-3">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>
-            <label style="font-size: 35px; color: blue">{{temp}}°C</label>
+            <label style="font-size: 35px; color: #27b6c4">{{temp}}°C</label>
         </div>
         <div class="col-md-3 col-xs-6">
             <label style="font-size: 15px">
