--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -22,9 +22,9 @@
     <div class="col-md-6 col-xs-10 pull-center">
         <div class="col-md-2 col-xs-3">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>
-            <label style="font-size: 35px; color: #85c5dd">{{temp}}°C</label>
+            <label style="font-size: 30px; color: #428bca">{{temp}}°C</label>
         </div>
-        <div class="col-md-3 col-xs-5 col-md-offset-1 col-xs-offset-1">
+        <div class="col-md-3 col-xs-6 col-md-offset-1 col-xs-offset-1">
             <label style="font-size: 15px">
                 Chuva: {{rain}}%<br>
                 Umidade: {{humidity}}%<br>
