--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -21,8 +21,9 @@
 <div class="row">
     <div class="col-md-6 col-xs-10 pull-center">
         <div class="col-md-2 col-xs-3">
+            <label style="font-size: 30px; color: #428bca">
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>
-            <label style="font-size: 30px; color: #428bca">{{temp}}°C</label>
+            {{temp}}°C</label>
         </div>
         <div class="col-md-3 col-xs-6 col-md-offset-1 col-xs-offset-1">
             <label style="font-size: 15px">
