--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -20,10 +20,13 @@
 </div>
 <div class="row">
     <div class="col-md-6 col-xs-10 pull-center">
-        <div class="col-md-2 col-xs-3">
+        <div class="col-md-2 col-xs-3">    
+            <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>          
+        </div>
+        <div class="col-md-3 col-xs-6 col-md-offset-1 col-xs-offset-1">
             <label style="font-size: 30px; color: #428bca">
-            <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>
-            {{temp}}°C</label>
+                {{temp}}°C
+            </label>
         </div>
         <div class="col-md-3 col-xs-6 col-md-offset-1 col-xs-offset-1">
             <label style="font-size: 15px">
