--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -12,8 +12,8 @@
     <div class="col-md-6 col-xs-12 pull-center">
         <div class="col-md-6 col-xs-12">
             <label>
-                <h2 style="font-size: 25px"><a>Maringá - PR</a></h1>
-                <h2 style="font-size: 15px"><a>{{today}}</a></h1>
+                <h2 style="font-size: 25px;color: #428bca"">Maringá - PR</h1>
+                <h2 style="font-size: 15px;color: #428bca"">{{today}}</h1>
             </label>
         </div>
     </div>
@@ -23,7 +23,7 @@
         <div class="col-md-2 col-xs-3">    
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>          
         </div>
-        <div class="col-md-2 col-xs-3">
+        <div class="col-md-3 col-xs-3 col-xs-pull-1">
             <label style="font-size: 30px; color: #428bca">
                 {{temp}}°C
             </label>
