--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -12,8 +12,8 @@
     <div class="col-md-6 col-xs-12 pull-center">
         <div class="col-md-6 col-xs-12">
             <label>
-                <h2 style="font-size: 25px;color: #428bca"">Maringá - PR</h1>
-                <h2 style="font-size: 15px;color: #428bca"">{{today}}</h1>
+                <h2 style="font-size: 25px;color: #428bca">Maringá - PR</h1>
+                <h2 style="font-size: 15px;color: #428bca">{{today}}</h1>
             </label>
         </div>
     </div>
