--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -23,8 +23,8 @@
         <div class="col-md-2 col-xs-3">    
             <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>          
         </div>
-        <div class="col-md-3 col-xs-3 col-xs-push-1">
-            <label style="font-size: 30px; color: #428bca">
+        <div class="col-md-2 col-xs-3 col-xs-pull-1">
+            <label style="font-size: 35px; color: #428bca">
                 {{temp}}°C
             </label>
         </div>
