--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -7,7 +7,7 @@
     };
 </script>
 
-
+<div class="offset-1">
 <div class="row">
     <div class="col-md-6 col-xs-12">
         <label>
@@ -33,7 +33,7 @@
         </label>
     </div>
 </div>
-
+</div>
 <br><br>
 <!--
 <form method="GET" name="cotador" id="cotador" class="post-form">{% csrf_token %}
