--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -7,7 +7,7 @@
     };
 </script>
 <div class="row">
-    <div class="col-md-offset-1">
+    <div class="col-md-offset-1 col-xs-offset-1">
         <div class="row">
             <div class="col-md-6 col-xs-12">
                 <label>
