--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -11,13 +11,13 @@
         <div class="row">
             <div class="col-md-6 col-xs-12">
                 <label>
-                    <h2 style="font-size: 25px;color: #428bca">Maringá - PR</h1>
-                    <h2 style="font-size: 15px;color: #428bca">{{today}}</h1>
+                    <h2 style="font-size: 25px;color: #428bca"><strong>Maringá - PR</strong></h1>
+                    <h2 style="font-size: 15px;color: #428bca"><strong>{{today}}</strong></h1>
                 </label>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-2 col-xs-3">    
+            <div class="col-md-1 col-xs-3">    
                 <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon1.png" align="center"/>          
             </div>
             <div class="col-md-2 col-xs-3 col-xs-pull-1">
