--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -23,7 +23,7 @@
             <div class="col-md-2 col-xs-3">
                 <label style="font-size: 35px; color: #428bca">
                     {{temp}}°C
-                </label>
+                </label><br>
 
                 <label style="font-size: 15px">
                     Chuva: {{rain}}%<br>
