--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <div class="col-md-1 col-xs-4">    
-                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon2.png" align="center"/>          
+                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon{{icon}}.png" align="center"/>          
             </div>
             <div class="col-md-2 col-xs-4">
                 <label style="font-size: 34px; color: #428bca">
