--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -30,6 +30,13 @@
                     Vento: {{wind}}km/h
                 </label>
             </div>
+            <div>
+                <label style="font-size: 13px">
+                    Chuva: {{rain}}%<br>
+                    Umidade: {{humidity}}%<br>
+                    Vento: {{wind}}km/h
+                </label>
+            </div>
         </div>
     </div>
 </div>
