--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -32,6 +32,7 @@
             </div>
             <div>
                 <label style="font-size: 13px">
+                    {{weather}}
                     Chuva: {{rain}}%<br>
                     Umidade: {{humidity}}%<br>
                     Vento: {{wind}}km/h
