--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -32,7 +32,8 @@
             </div>
             <div>
                 <label style="font-size: 13px">
-                    {{weather}}
+                    {{weather.weather.temp}}
+                    {{weather.weather}}
                     Chuva: {{rain}}%<br>
                     Umidade: {{humidity}}%<br>
                     Vento: {{wind}}km/h
