--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -32,11 +32,12 @@
             </div>
             <div>
                 <label style="font-size: 13px">
-                    {{weather.weather.temp}}
-                    {{weather.weather}}
+                    {{weather.main.temp}}
+                    
                     Chuva: {{rain}}%<br>
                     Umidade: {{humidity}}%<br>
                     Vento: {{wind}}km/h
+                    {{weather.wind}}
                 </label>
             </div>
         </div>
