--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -34,7 +34,8 @@
                 <label style="font-size: 13px">                    
                     Chuva: {{rain}}%<br>
                     Umidade: {{humidity}}%<br>
-                    Vento: {{wind}}km/h
+                    Vento: {{wind}}km/h<br>
+                    Nuvens: {{clouds}}
                 </label>
             </div>
         </div>
