--- a/cotador/templates/pdc/weather.html
+++ b/cotador/templates/pdc/weather.html
@@ -10,7 +10,7 @@
         <label style="font-size: 13px">
             Chuva: {{rain}}%<br>
             Umidade: {{humidity}}%<br>
-            Vento: {{wind}} km/h<br>
+            Vento: {{weater}} km/h<br>
         </label>
     </div>
 </div>
