--- a/cotador/templates/pdc/weather.html
+++ b/cotador/templates/pdc/weather.html
@@ -5,12 +5,12 @@
     </div>
     <div class="col-md-2 col-xs-4">
         <label style="font-size: 34px; color: #428bca">
-            {{temp}}°C
+            {{weather.temp}}°C
         </label><br>
         <label style="font-size: 13px">
-            Chuva: {{rain}}%<br>
-            Umidade: {{humidity}}%<br>
-            Vento: {{weater.temp}} km/h<br>
+            Chuva: {{weather.rain}}%<br>
+            Umidade: {{weather.humidity}}%<br>
+            Vento: {{weater.wind}} km/h<br>
         </label>
     </div>
 </div>
