--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -22,12 +22,12 @@
             </div>
             <div class="col-md-2 col-xs-4">
                 <label style="font-size: 34px; color: #428bca">
-                    {{temp}}°C
+                    {{weather.temp}}°C
                 </label><br>
                 <label style="font-size: 13px">
-                    Chuva: {{rain}}%<br>
-                    Umidade: {{humidity}}%<br>
-                    Vento: {{wind}} km/h<br>
+                    Chuva: {{weater.rain}}%<br>
+                    Umidade: {{weather.humidity}}%<br>
+                    Vento: {{weather.wind}} km/h<br>
                 </label>
             </div>
         </div>
