--- a/cotador/templates/pdc/weather.html
+++ b/cotador/templates/pdc/weather.html
@@ -9,7 +9,7 @@
         <label style="font-size: 13px">
             Chuva: {{weather.rain}}%<br>
             Umidade: {{weather.humidity}}%<br>
-            Vento: {{weater.wind}} km/h<br>
+            Vento: {{weather.wind}} km/h<br>
         </label>
     </div>
 </div>
