--- a/cotador/templates/pdc/weather.html
+++ b/cotador/templates/pdc/weather.html
@@ -1,15 +1,27 @@
 <div class="row">
-    <div class="col-md-1 col-xs-4">    
-        <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon{{icon}}.png" align="center"/>          
-    </div>
-    <div class="col-md-2 col-xs-4">
-        <label style="font-size: 34px; color: #428bca">
-            {{weather.temp}}°C
-        </label><br>
-        <label style="font-size: 13px">
-            Chuva: {{weather.rain}}%<br>
-            Umidade: {{weather.humidity}}%<br>
-            Vento: {{weather.wind}} km/h<br>
-        </label>
+    <div class="col-md-offset-1 col-xs-offset-1">
+        <div class="row">
+            <div class="col-md-6 col-xs-12">
+                <label>
+                    <h2 style="font-size: 25px;color: #428bca"><strong>Maringá - PR</strong></h1>
+                    <h2 style="font-size: 15px;color: #428bca"><strong>{{today}}</strong></h1>
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-1 col-xs-4">    
+                <img class="img-responsive img-rounded" src="http://project-zeta.one/meteorologia/pdc/weather/weather_icon{{icon}}.png" align="center"/>          
+            </div>
+            <div class="col-md-2 col-xs-4">
+                <label style="font-size: 34px; color: #428bca">
+                    {{weather.temp}}°C
+                </label><br>
+                <label style="font-size: 13px">
+                    Chuva: {{weater.rain}}%<br>
+                    Umidade: {{weather.humidity}}%<br>
+                    Vento: {{weather.wind}} km/h<br>
+                </label>
+            </div>
+        </div>
     </div>
 </div>
