--- a/cotador/templates/pdc/pdc.html
+++ b/cotador/templates/pdc/pdc.html
@@ -25,7 +25,7 @@
                     {{weather.temp}}°C
                 </label><br>
                 <label style="font-size: 13px">
-                    Chuva: {{weater.rain}}%<br>
+                    Chuva: {{weather.rain}}%<br>
                     Umidade: {{weather.humidity}}%<br>
                     Vento: {{weather.wind}} km/h<br>
                 </label>
