Update and rename test.html to weather.html

--- a/cotador/templates/pdc/weather.html
+++ b/cotador/templates/pdc/weather.html
@@ -1,4 +1,4 @@
 {% extends 'pdc/base.html' %}
 {% block content %}
-{% include 'pdc/weather.html' %}
+{% include 'pdc/weather_widget.html' %}
 {% endblock %}
