--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -44,7 +44,7 @@
       </div>
       <br>
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2 col-sm-2">
           <label for="lbl_cpf">CPF:</label>
           {% if cpf_cnpj %}
             <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" value="{{cpf_cnpj}}" onchange="validar()">
