--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -29,7 +29,7 @@
             </button>
       <!-- Begin Subpage 1 -->
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-2">
           <label for="lbl_product">Produto: {{product}} - Page: {{index}}</label>
           <select name="product" class="form-control" >
             {% for product in products %}
@@ -55,7 +55,7 @@
             {% endif %}
           {% endif %}
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-2">
           <label for="lbl_insured_name">Nome do Segurado:</label>
           {% if insured_name %}
             <input name="insured_name" type="text" class="form-control" value="{{insured_name}}" disabled>
