--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -68,7 +68,7 @@
     <!-- End Subpage 1 -->
   </form>
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-8 col-sm-2">
     {% if index >= 4 %}
     <div class="col-md-6 col-md-push-1">
       <div class="panel panel-primary">
