--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -22,7 +22,7 @@
         <div class="page-header">
             <h1><a href="/">| ADAPITECH |</a></h1>
         </div>
-        <div class="panel panel-primary col-xs-6">
+        <div class="panel panel-primary">
           <!-- Menu begin -->
 
             <!-- Menu end -->
