--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -22,53 +22,57 @@
     </nav>
   </h1>
   <div class="container-fluid">
-  <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
-    <div class="form-group">
-        <button type="submit" class="btn btn-default">
-                Calcular
-            </button>
-      <!-- Begin Subpage 1 -->
-      <div class="row">
-        <div class="col-md-3">
-          <label for="lbl_product">Produto: {{product}} - Page: {{index}}</label>
-          <select name="product" class="form-control" >
-            {% for product in products %}
-            {% if product.id == product_sel %}
-            <option value="{{product.id}}" selected>{{product.name}}</option>
-            {% else %}{% endif% }
-            <option value="{{product.id}}">{{product.name}}</option>
-            {% endif %}
-            {% endfor %}
-          </select>
+    <div class="col-md-12 col-md-offset-3">
+      <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
+        <div class="form-group">
+            <button type="submit" class="btn btn-default">
+                    Calcular
+                </button>
+          <!-- Begin Subpage 1 -->
+          <div class="row">
+            <div class="col-md-3">
+              <label for="lbl_product">Produto: {{product}} - Page: {{index}}</label>
+              <select name="product" class="form-control" >
+                {% for product in products %}
+                {% if product.id == product_sel %}
+                <option value="{{product.id}}" selected>{{product.name}}</option>
+                {% else %}{% endif% }
+                <option value="{{product.id}}">{{product.name}}</option>
+                {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+          <br>
+          <!-- BEGIN ROW 1-->
+          <div class="row">
+            <div class="col-md-2">
+              <label for="lbl_cpf">CPF:</label>
+              {% if cpf_cnpj %}
+                <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" value="{{cpf_cnpj}}" onchange="validar()">
+              {% else %}
+                <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" onchange="validar()">
+                {% if cpf_error == True %}
+                <p>CPF Inválido</p>
+                {% endif %}
+              {% endif %}
+            </div>
+            <div class="col-md-3">
+              <label for="lbl_insured_name">Nome do Segurado:</label>
+              {% if insured_name %}
+                <input name="insured_name" type="text" class="form-control" value="{{insured_name}}" disabled>
+              {% else %}
+                <input name="insured_name" type="text" class="form-control">
+              {% endif %}
+            </div>
+          </div>
+          <!-- END ROW 1-->
         </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-md-2">
-          <label for="lbl_cpf">CPF:</label>
-          {% if cpf_cnpj %}
-            <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" value="{{cpf_cnpj}}" onchange="validar()">
-          {% else %}
-            <input name="cpf_cnpj" id="cpf_cnpj" type="text" class="form-control" onchange="validar()">
-            {% if cpf_error == True %}
-            <p>CPF Inválido</p>
-            {% endif %}
-          {% endif %}
-        </div>
-        <div class="col-md-3">
-          <label for="lbl_insured_name">Nome do Segurado:</label>
-          {% if insured_name %}
-            <input name="insured_name" type="text" class="form-control" value="{{insured_name}}" disabled>
-          {% else %}
-            <input name="insured_name" type="text" class="form-control">
-          {% endif %}
-        </div>
-      </div>
-    </div>
-    <!-- End Subpage 1 -->
-  </form>
+        <!-- End Subpage 1 -->
+      </form>
+    </div> <!-- Fim painel do formulário -->
 <div class="row">
-  <div class="col-md-8 col-sm-2">
+  <div class="col-md-8">
     {% if index >= 4 %}
     <div class="col-md-6 col-md-push-1">
       <div class="panel panel-primary">
