--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -67,6 +67,23 @@
             </div>
           </div>
           <!-- END ROW 1-->
+          <br>
+          <!-- BEGIN ROW 2-->
+          <div class="row">
+            <div class="col-md-3">
+              <label for="lbl_uf">Estado</label>
+              <select name="uf" class="form-control" >
+                {% for uf in ufs %}
+                {% if uf.id == uf_sel %}
+                <option value="{{uf.id}}" selected>{{uf.name}}</option>
+                {% else %}{% endif% }
+                <option value="{{uf.id}}">{{uf.name}}</option>
+                {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+          </div>
+          <!-- END ROW 2-->
         </div>
         <!-- End Subpage 1 -->
       </form>
