--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -25,7 +25,7 @@
     <div class="col-md-12 col-md-offset-3">
       <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
         <div class="form-group">
-            <label name="ind" id="ind" value="validator">{{validator}}</label>
+            <label name="ind" id="ind">{{validator}}</label>
             <button type="submit" class="btn btn-default">
                     Calcular
                 </button>
