--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -32,7 +32,7 @@
           <!-- Begin Subpage 1 -->
           <div class="row">
             <div class="col-md-3">
-              <label name="ind" id="ind" value="{{validator}}">{{validator}}</label>  
+              <label name="ind" id="ind" value="{{validator}}">{{validator}}</label>  <br>
               <label for="lbl_product">Produto: {{product}} - Page: {{index}}</label>
               <select name="product" class="form-control" >
                 {% for product in products %}
