--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -25,7 +25,7 @@
     <div class="col-md-12 col-md-offset-3">
       <form method="POST" name="cotador" id="cotador" class="post-form">{% csrf_token %}
         <div class="form-group">
-            
+
             <button type="submit" class="btn btn-default">
                     Calcular
                 </button>
@@ -72,7 +72,7 @@
           <br>
           <!-- BEGIN ROW 2-->
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-2">
               <label for="lbl_uf">Estado</label>
               <select name="uf" class="form-control" onchange="validar()">
                 {% for uf in ufs %}
@@ -80,6 +80,18 @@
                 <option value="{{uf.id}}" selected>{{uf.name}}</option>
                 {% else %}{% endif% }
                 <option value="{{uf.id}}">{{uf.name}}</option>
+                {% endif %}
+                {% endfor %}
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label for="lbl_city">Município</label>
+              <select name="city" class="form-control" onchange="validar()">
+                {% for city in cities %}
+                {% if city.id == city_sel %}
+                <option value="{{city.id}}" selected>{{city.name}}</option>
+                {% else %}{% endif% }
+                <option value="{{city.id}}">{{city.name}}</option>
                 {% endif %}
                 {% endfor %}
               </select>
