--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -43,6 +43,10 @@
                 {% endif %}
                 {% endfor %}
               </select>
+                <select name="product" class="form-control" >
+                <option value="1">1</option>
+                <option value="2" selected>2</option>
+              </select>
             </div>
           </div>
           <br>
