--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -45,7 +45,7 @@
               </select>
                 <select name="product" class="form-control" >
                 <option value="1">1</option>
-                <option value="2" {% if uf_sel == 2 %} selected {% endif %}>2</option>
+                <option value="2" {% if uf_sel == "2" %} selected {% endif %}>2</option>
               </select>
             </div>
           </div>
