--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -7,7 +7,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>ADAPITECH | Solutions</title>
+        <title>Adalto</title>
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap-theme.css' %}">
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
         <script src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
@@ -20,7 +20,7 @@
     <body data-spy="scroll" data-target=".bs-docs-sidebar">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="page-header">
-            <h1><a href="/">| ADAPITECH |</a></h1>
+            <h1><a href="/">| Adalto |</a></h1>
         </div>
         <div class="panel panel-primary">
           <!-- Menu begin -->
