--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -95,11 +95,11 @@
             </div>
             <div class="col-md-1">
               <label for="lbl_area">Área:</label>
-                <input name="area" type="text" class="form-control">
+                <input name="area" type="text" class="form-control" {% if area %} value="{{area}}" {% endif %}>
           </div>
           <div class="col-md-1">
               <label for="lbl_price_sack">Preço da Saca:</label>
-                <input name="area" type="text" class="form-control">
+                <input name="sack_price" type="text" class="form-control" {% if sack_price %} value="{{sack_price}}"{% endif %}>
           </div>
           <!-- END ROW 3-->
         </div>
