--- a/cotador/templates/cotador/multirrisco.html
+++ b/cotador/templates/cotador/multirrisco.html
@@ -108,7 +108,7 @@
     </div> <!-- Fim painel do formulário -->
 <div class="row">
   <div class="col-md-8">
-    {% if index >= 4 %}
+    {% if quotation_number =! '' %}
     <div class="col-md-6 col-md-push-1">
       <div class="panel panel-primary">
         <div class="panel-heading">
