--- a/cotador/templates/cotador/base.html
+++ b/cotador/templates/cotador/base.html
@@ -26,6 +26,7 @@
           <!-- Menu begin -->
 
             <!-- Menu end -->
+            <a href="{% url 'quotation_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
               {% block content %}
               {% endblock %}
         </div>
