--- a/cotador/templates/pdc/base.html
+++ b/cotador/templates/pdc/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>ADAPITECH | Solutions</title>
+        <title>4 Logic</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="{% static 'bootstrap-3.3.7/css/bootstrap-theme.css' %}">
@@ -16,7 +16,7 @@
     <body data-spy="scroll" data-target=".bs-docs-sidebar">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <div class="page-header">
-            <h1><a href="/pdc">| ADAPITECH |</a></h1>
+            <h1><a href="/pdc">| 4 Logic |</a></h1>
         </div>
         <div>
           <!-- Menu begin -->
