--- a/cotador/templates/pdc/view.html
+++ b/cotador/templates/pdc/view.html
@@ -5,7 +5,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-8">
-        <h1><a href="/">Cadastrados</a></h1>
+        <h1><a href="/">Weather Data | DCP Maringá</a></h1>
         <table class="table table-bordered">
           <thead>
             <tr>
