--- a/cotador/templates/pdc/view.html
+++ b/cotador/templates/pdc/view.html
@@ -21,7 +21,7 @@
               <td>{{weather_data.temperature}}</a></td>
               <td>{{ weather_data.humidity }}</td>
               <td>{{ weather_data.rain }}</td>
-              <td> {{ weather_data.date|date:"d/m/Y" time:"H:M:S" }}</td>
+              <td> {{ weather_data.date|date:"d/m/Y" |time:"H:M:S" }}</td>
             </tr>
             {% endfor %}
           </tbody>
